# chapters

./: Cargo.toml  README.md  RELEASES.md
.github/workflows/: rust.yml
src/: lib.rs  serialization.rs
tests/: tests.rs
tests/data/: chapters.empty.json  description-chapters.txt  podcast-namespace-chapters.github-example-rssblue-variant.json
