[package]
authors = ["RSS Blue", "Dovydas Joksas"]
categories = ["parsing", "multimedia::audio", "encoding"]
description = "Manage podcast chapters in Rust"
edition = "2021"
keywords = ["podcast"]
license = "MIT OR Apache-2.0"
name = "chapters"
readme = "README.md"
repository = "https://github.com/rssblue/chapters"
version = "0.3.1"

[dependencies]
chrono = "0.4.26"
id3 = "1.7.0"
regex = "1.8.4"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
url = "2.4.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
