[package]
authors = ["RSS Blue", "Dovydas Joksas"]
categories = ["parsing", "multimedia::audio", "encoding"]
description = "Manage podcast chapters in Rust"
edition = "2021"
keywords = ["podcast"]
license = "MIT OR Apache-2.0"
name = "chapters"
readme = "README.md"
repository = "https://github.com/rssblue/chapters"
version = "0.3.2"

[dependencies]
chrono = "0.4.31"
id3 = "1.8.0"
regex = "1.10.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
url = "2.4.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
